--- a/src/main/resources/templates/review/reviews.html
+++ b/src/main/resources/templates/review/reviews.html
@@ -28,6 +28,7 @@
                                 <th style="width: 80px;" scope="col">상품정보</th>
                                 <th style="width: 180px;" scope="col"></th>
                                 <th style="width: auto;" scope="col">제목</th>
+                                <th style="width: 150px;" scope="col">평점</th>
                                 <th style="width: 10%;" scope="col">작성자</th>
                                 <th style="width: 10%;" scope="col">작성일</th>
                             </tr>
@@ -51,6 +52,20 @@
                                     <a th:href="${'/review/' + review.reviewId}">
                                         <span th:text="${review.title}"></span>
                                     </a>
+                                </td>
+                                <td>
+                                    <fieldset class="rate" th:data-rating="${review.rating}">
+                                        <input type="radio" th:id="${review.createdBy + 1}" th:name="${review.reviewId}" value="5.0" onclick="return false;"><label th:for="${review.createdBy + 1}" ></label>
+                                        <input type="radio" th:id="${review.createdBy + 2}" th:name="${review.reviewId}" value="4.5" onclick="return false;"><label th:for="${review.createdBy + 2}" class="half" ></label>
+                                        <input type="radio" th:id="${review.createdBy + 3}" th:name="${review.reviewId}" value="4.0" onclick="return false;"><label th:for="${review.createdBy + 3}"></label>
+                                        <input type="radio" th:id="${review.createdBy + 4}" th:name="${review.reviewId}" value="3.5" onclick="return false;"><label th:for="${review.createdBy + 4}" class="half" ></label>
+                                        <input type="radio" th:id="${review.createdBy + 5}" th:name="${review.reviewId}" value="3.0" onclick="return false;"><label th:for="${review.createdBy + 5}"></label>
+                                        <input type="radio" th:id="${review.createdBy + 6}" th:name="${review.reviewId}" value="2.5" onclick="return false;"><label th:for="${review.createdBy + 6}" class="half" ></label>
+                                        <input type="radio" th:id="${review.createdBy + 7}" th:name="${review.reviewId}" value="2.0" onclick="return false;"><label th:for="${review.createdBy + 7}"></label>
+                                        <input type="radio" th:id="${review.createdBy + 8}" th:name="${review.reviewId}" value="1.5" onclick="return false;"><label th:for="${review.createdBy + 8}" class="half" ></label>
+                                        <input type="radio" th:id="${review.createdBy + 9}" th:name="${review.reviewId}" value="1.0" onclick="return false;"><label th:for="${review.createdBy + 9}"></label>
+                                        <input type="radio" th:id="${review.createdBy + 10}" th:name="${review.reviewId}" value="0.5" onclick="return false;"><label th:for="${review.createdBy + 10}" class="half" ></label>
+                                    </fieldset>
                                 </td>
                                 <td class="createdBy">
                                     <span th:text="${review.createdBy}"></span>
@@ -141,6 +156,17 @@
         /* 글쓰기 버튼 */
         $(".write_btn").on("click", function () {
             location.href = "/review/enroll";
+        });
+
+        /* 평점 값 설정 */
+        $(".rate").each(function () {
+
+            let rating = $(this).attr("data-rating");
+            $(this).find('input').each(function (index, element) {
+                if ($(element).val() === rating) {
+                    $(element).prop("checked", true);
+                }
+            });
         });
     });
 
