--- a/src/main/resources/static/css/scss/pages/_itemDtl.scss
+++ b/src/main/resources/static/css/scss/pages/_itemDtl.scss
@@ -368,14 +368,45 @@
                                 vertical-align: middle;
                                 padding: 15px 0;
 
-                                &.left_top {
+                                &.left {
                                     text-align: left;
-                                    vertical-align: top;
                                 }
 
                                 a:hover {
                                     text-decoration: underline;
                                     color: #555555;
+                                }
+
+                                .rate {
+                                    display: inline-block;
+
+                                    input {
+                                        display: none;
+                                    }
+
+                                    label {
+                                        float: right;
+                                        color: #ddd;
+
+                                        &:before {
+                                            display: inline-block;
+                                            font-size: 1rem;
+                                            padding: .3rem .2rem;
+                                            margin: 0;
+                                            cursor: pointer;
+                                            font-family: FontAwesome;
+                                            content: "\f005 ";
+                                        }
+                                    }
+
+                                    .half:before {
+                                        content: "\f089 ";
+                                        position: absolute;
+                                    }
+
+                                    input:checked~label {
+                                        color: #f73c32 !important;
+                                    }
                                 }
                             }
 
