--- a/src/main/resources/static/css/scss/pages/_reviewEnroll.scss
+++ b/src/main/resources/static/css/scss/pages/_reviewEnroll.scss
@@ -163,9 +163,43 @@
                             width: 30%;
                         }
 
-                        span {
+                        span.text-danger {
                             display: none;
                             margin-top: 2px;
+                        }
+
+                        .rate {
+                            display: inline-block;
+
+                            input {
+                                display: none;
+                            }
+
+                            label {
+                                float: right;
+                                color: #ddd;
+
+                                &:before {
+                                    display: inline-block;
+                                    font-size: 1rem;
+                                    padding: .3rem .2rem;
+                                    margin: 0;
+                                    cursor: pointer;
+                                    font-family: FontAwesome;
+                                    content: "\f005 ";
+                                }
+                            }
+
+                            .half:before {
+                                content: "\f089 ";
+                                position: absolute;
+                            }
+
+                            input:checked~label,
+                            label:hover,
+                            label:hover~label {
+                                color: #f73c32 !important;
+                            }
                         }
                     }
                 }
