--- a/src/main/resources/static/css/scss/pages/_reviewForm.scss
+++ b/src/main/resources/static/css/scss/pages/_reviewForm.scss
@@ -143,8 +143,73 @@
                             width: 30%;
                         }
 
-                        span {
+                        span.text-danger {
                             display: none;
+                        }
+
+                        .rateForUpdateForm {
+                            display: inline-block;
+
+                            input {
+                                display: none;
+                            }
+
+                            label {
+                                float: right;
+                                color: #ddd;
+
+                                &:before {
+                                    display: inline-block;
+                                    font-size: 1rem;
+                                    padding: .3rem .2rem;
+                                    margin: 0;
+                                    cursor: pointer;
+                                    font-family: FontAwesome;
+                                    content: "\f005 ";
+                                }
+                            }
+
+                            .half:before {
+                                content: "\f089 ";
+                                position: absolute;
+                            }
+
+                            input:checked~label,
+                            label:hover,
+                            label:hover~label {
+                                color: #f73c32 !important;
+                            }
+                        }
+
+                        .rateForDtlForm {
+                            display: inline-block;
+
+                            input {
+                                display: none;
+                            }
+
+                            label {
+                                float: right;
+                                color: #ddd;
+
+                                &:before {
+                                    display: inline-block;
+                                    font-size: 1rem;
+                                    padding: .3rem .2rem;
+                                    margin: 0;
+                                    font-family: FontAwesome;
+                                    content: "\f005 ";
+                                }
+                            }
+
+                            .half:before {
+                                content: "\f089 ";
+                                position: absolute;
+                            }
+
+                            input:checked~label {
+                                color: #f73c32 !important;
+                            }
                         }
                     }
                 }
@@ -167,7 +232,7 @@
 }
 
 @media (max-width: 1200px) {
-    .review_dtl_body {
+    .review_form_body {
         .item_info_wrap {
             width: 90%;
         }
@@ -181,7 +246,7 @@
 }
 
 @media (max-width: 992px) {
-    .review_dtl_body {
+    .review_form_body {
         .item_info_wrap {
             width: 100%;
         }
