--- a/src/main/resources/templates/review/reviewEnroll.html
+++ b/src/main/resources/templates/review/reviewEnroll.html
@@ -81,18 +81,19 @@
                                             <label th:for="*{rating}">평점 <span>*</span></label>
                                         </th>
                                         <td>
-                                            <select th:field="*{rating}">
-                                                <option value="0.5">0.5</option>
-                                                <option value="1.0">1.0</option>
-                                                <option value="1.5">1.5</option>
-                                                <option value="2.0">2.0</option>
-                                                <option value="2.5">2.5</option>
-                                                <option value="3.0">3.0</option>
-                                                <option value="3.5">3.5</option>
-                                                <option value="4.0">4.0</option>
-                                                <option value="4.5">4.5</option>
-                                                <option value="5.0">5.0</option>
-                                            </select>
+                                            <fieldset class="rate">
+                                                <input type="radio" id="rating10" name="rating" value="5"><label for="rating10"></label>
+                                                <input type="radio" id="rating9" name="rating" value="4.5"><label for="rating9" class="half" ></label>
+                                                <input type="radio" id="rating8" name="rating" value="4"><label for="rating8"></label>
+                                                <input type="radio" id="rating7" name="rating" value="3.5"><label for="rating7" class="half" ></label>
+                                                <input type="radio" id="rating6" name="rating" value="3"><label for="rating6"></label>
+                                                <input type="radio" id="rating5" name="rating" value="2.5"><label for="rating5" class="half" ></label>
+                                                <input type="radio" id="rating4" name="rating" value="2"><label for="rating4"></label>
+                                                <input type="radio" id="rating3" name="rating" value="1.5"><label for="rating3" class="half" ></label>
+                                                <input type="radio" id="rating2" name="rating" value="1"><label for="rating2"></label>
+                                                <input type="radio" id="rating1" name="rating" value="0.5"><label for="rating1" class="half" ></label>
+                                            </fieldset>
+                                            <span class="text-danger rating_warn_msg">평점을 입력해주세요.</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -159,12 +160,14 @@
             $(".enroll_btn").on("click", function () {
                 /* 유효성 검사 통과유무 변수 */
                 let titleCheck = false;     // 제목 체크
+                let ratingCheck = false;    // 평점 체크
                 let contentCheck = false;   // 내용 체크
                 let passwordCheck = false;  // 비밀번호 체크
                 let itemIdCheck = false;    // 상품정보선택 체크
 
                 /* 입력값 변수 */
                 let titleVal = $('.title_input').val(); // 제목 입력란
+                let ratingVal = $("input[name='rating']:checked").val(); // 제목 입력란
                 let contentVal = $('.content_input').val(); // 내용 입력란
                 let passwordVal = $('.password_input').val(); // 비밀번호 입력란
                 let itemIdVal = $('.hiddenItemId').val(); // 비밀번호 입력란
@@ -176,6 +179,15 @@
                 } else {
                     $('.title_warn_msg').css('display', 'none')
                     titleCheck = true;
+                }
+
+                /* 평점 유효성 검사 */
+                if (!ratingVal >= 1) {
+                    $('.rating_warn_msg').css('display', 'block')
+                    ratingCheck = false;
+                } else {
+                    $('.rating_warn_msg').css('display', 'none')
+                    ratingCheck = true;
                 }
 
                 /* 내용 유효성 검사 */
@@ -206,13 +218,13 @@
                 }
 
                 /* 최종 유효성 검사 */
-                if (titleCheck && contentCheck && passwordCheck && itemIdCheck) {
+                if (titleCheck && ratingCheck && contentCheck && passwordCheck && itemIdCheck) {
                     let itemId = $(".hiddenItemId").val();
 
                     let param = {
                         itemId: itemId,
                         title: $(".title_input").val(),
-                        rating: $(".rating_select").val(),
+                        rating: $("input[name='rating']:checked").val(),
                         content: $(".content_input").val(),
                         password: $(".password_input").val()
                     }
@@ -246,6 +258,7 @@
             $(".cancel_btn").on("click", function () {
                 window.history.back();
             });
+
         });
     </script>
 </body>
